config/home/elrond/etc/iptables/rules.v4
# Generated by iptables-save v1.6.1 on Fri Jan 24 23:18:05 2020
*security
:INPUT ACCEPT [1464:177319]
:FORWARD ACCEPT [19:1220]
:OUTPUT ACCEPT [934:103859]
COMMIT
# Completed on Fri Jan 24 23:18:05 2020
# Generated by iptables-save v1.6.1 on Fri Jan 24 23:18:05 2020
*raw
:PREROUTING ACCEPT [2049:213977]
:OUTPUT ACCEPT [934:103859]
COMMIT
# Completed on Fri Jan 24 23:18:05 2020
# Generated by iptables-save v1.6.1 on Fri Jan 24 23:18:05 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
# NAT rules for port-forwarding to different hosts
#
# send port 80 to glorfindel
-A PREROUTING -d 70.167.22.26 -p tcp --dport 80 -j DNAT --to-destination 10.42.20.5:80
-A POSTROUTING -d 10.42.20.5 -p tcp --dport 80 -j SNAT --to-source 10.42.20.2
# send port 22 to glorfindel
-A PREROUTING -d 70.167.22.26 -p tcp --dport 22 -j DNAT --to-destination 10.42.20.5:22
-A POSTROUTING -d 10.42.20.5 -p tcp --dport 22 -j SNAT --to-source 10.42.20.2
# send port 51820 to glorfindel
-A PREROUTING -d 70.167.22.26 -p udp --dport 51820 -j DNAT --to-destination 10.42.20.5:51820
-A POSTROUTING -d 10.42.20.5 -p udp --dport 51820 -j SNAT --to-source 10.42.20.2
# send port 51821 to glorfindel
-A PREROUTING -d 70.167.22.26 -p udp --dport 51821 -j DNAT --to-destination 10.42.20.5:51821
-A POSTROUTING -d 10.42.20.5 -p udp --dport 51821 -j SNAT --to-source 10.42.20.2
# send port 51822 to haldir
-A PREROUTING -d 70.167.22.26 -p udp --dport 51822 -j DNAT --to-destination 10.42.20.6:51822
-A POSTROUTING -d 10.42.20.6 -p udp --dport 51822 -j SNAT --to-source 10.42.20.2
# send port 51823 to galadriel
-A PREROUTING -d 70.167.22.26 -p udp --dport 51823 -j DNAT --to-destination 10.42.20.4:51823
-A POSTROUTING -d 10.42.20.4 -p udp --dport 51823 -j SNAT --to-source 10.42.20.2

# masquerade all outbound traffic on our public interface (eth0.2, vlan2)
-A POSTROUTING -o eth0.2 -j MASQUERADE

COMMIT
# Completed on Fri Jan 24 23:18:05 2020
# Generated by iptables-save v1.6.1 on Fri Jan 24 23:18:05 2020
*mangle
:PREROUTING ACCEPT [2049:213977]
:INPUT ACCEPT [1464:177319]
:FORWARD ACCEPT [19:1220]
:OUTPUT ACCEPT [934:103859]
:POSTROUTING ACCEPT [1113:123380]
COMMIT
# Completed on Fri Jan 24 23:18:05 2020
# Generated by iptables-save v1.6.1 on Fri Jan 24 23:18:05 2020
*filter
# Allow all outgoing, but drop incoming and forwarding packets by default
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# Custom per-protocol chains
:UDP - [0:0]
:TCP - [0:0]
:ICMP - [0:0]

# Acceptable UDP traffic


# Acceptable TCP traffic


# Acceptable ICMP traffic
-A ICMP -p icmp --icmp-type echo-request -j ACCEPT


# Boilerplate acceptance policy
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT


# Accept all trusted internal network traffic (i.e., not internet and not
# public.cah)
#
# FIXME: get rid of eth0 when ready
#
-A INPUT -i eth0 -j ACCEPT
-A INPUT -i eth0.20 -j ACCEPT
-A INPUT -i eth0.70 -j ACCEPT
-A INPUT -i eth0.90 -j ACCEPT
-A INPUT -i eth0.100 -j ACCEPT
#-A INPUT -i wg-labriola -j ACCEPT
-A INPUT -i wg-cah1 -j ACCEPT
-A INPUT -i wg-cah2 -j ACCEPT


# WireGuard policy
#
# let any wireguard traffic in on the port we're using
#
-A INPUT -i eth0.2 -p udp --dport 51820 -j ACCEPT
-A INPUT -i eth0.2 -p udp --dport 51821 -j ACCEPT
-A INPUT -i eth0.2 -p udp --dport 51822 -j ACCEPT
-A INPUT -i eth0.2 -p udp --dport 51823 -j ACCEPT


# WWW policy
#
# Open the standard port, we forward it to glorfindel in the nat table.
-A INPUT -i eth0.2 -p tcp --dport 80 -j ACCEPT


# SSH policy
#
# let everybody in locally
#
# NOTE: There's no reason for this rule, because we already allow ALL local
#       traffic... but just in case we change that later, I've left this here
#       commented out.
#
#-A INPUT ! -i eth0.2 -p tcp --dport 22 -j ACCEPT
#
# open up the standard port, we forward it to glorfindel in the nat table.
-A INPUT -i eth0.2 -p tcp --dport 22 -j ACCEPT

# Instead of blacklisting IPs that are spamming my box, let's try and deter
# brute force attacks by only allowing 3 connections per minute.  This way, the
# firewall is dynamically helping reduce traffic, and IPs don't get permanently
# banned.
#
# NOTE: This is slightly annoying because it doesn't matter if the connection
#       is successful.  This means, if I open 5 terminals and try to start an
#       ssh session in each of them, the last 2 will fail to connect.
#
# NOTE: This only limits eth0.2, all other interfaces are explicitly allowed
#       elsewhere.
#
# record connections to ssh port
-A INPUT -i eth0.2 -p tcp --dport 22 -m state --state NEW -m recent --set --name ssh --rsource
# then rate limit connection attempts to 3 per minute
-A INPUT -i eth0.2 -p tcp --dport 22 -m state --state NEW -m recent ! --rcheck --seconds 60 --hitcount 4 --name ssh --rsource -j ACCEPT 


# Drop invalid packets
-A INPUT -m conntrack --ctstate INVALID -j DROP

# Pass traffic to protocol-specific chains
## Only allow new connections (established and related should already be handled)
## For TCP, additionally only allow new SYN packets since that is the only valid
## method for establishing a new TCP connection
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp --syn -m conntrack --ctstate NEW -j TCP
-A INPUT -p icmp -m conntrack --ctstate NEW -j ICMP

# Reject anything that's fallen through to this point
## Try to be protocol-specific w/ rejection message
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable


# Internet reply forwarding policies
#
# Allow all replies to forward back to the appropriate interface.  No point in
# dropping any of this, really.
#
# FIXME: should we eventually remove the eth0 interface rules?
#
-A FORWARD -i eth0.2 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0.2 -o eth0.20 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0.2 -o eth0.70 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0.2 -o eth0.90 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0.2 -o eth0.100 -m state --state RELATED,ESTABLISHED -j ACCEPT
#-A FORWARD -i eth0.2 -o wg-labriola -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0.2 -o wg-cah1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0.2 -o wg-cah2 -m state --state RELATED,ESTABLISHED -j ACCEPT


# Internal network forwarding policies
#
# old 192 network can go everywhere (TEMPORARY)
#
# FIXME: remove this once we're ready to decomission that old network
#
-A FORWARD -i eth0 -j ACCEPT
#
# infrastructure can go everywhere (CONFIRMED)
-A FORWARD -i eth0.20 -j ACCEPT
#
# instrument can only go to internet and infrastructure (CONFIRMED)
-A FORWARD -i eth0.70 -j ACCEPT
#-A FORWARD -i eth0.70 -o eth0.2 -j ACCEPT
#-A FORWARD -i eth0.70 -o eth0.20 -j ACCEPT
#-A FORWARD -i eth0.70 -o wg-labriola -j ACCEPT
#
# data can only go to internet and infrastructure
-A FORWARD -i eth0.90 -j ACCEPT
#-A FORWARD -i eth0.90 -o eth0.2 -j ACCEPT
#-A FORWARD -i eth0.90 -o eth0.20 -j ACCEPT
#-A FORWARD -i eth0.90 -o wg-labriola -j ACCEPT
#
# public can only go to internet (CONFIRMED)
-A FORWARD -i eth0.100 -j ACCEPT
#-A FORWARD -i eth0.100 -o eth0.2 -j ACCEPT
#
# allow wireguard interfaces to forward everywhere
#-A FORWARD -i wg-labriola -j ACCEPT
-A FORWARD -i wg-cah1 -j ACCEPT
-A FORWARD -i wg-cah2 -j ACCEPT


# allow traffic heading to glorfindel
-A FORWARD -p tcp -d 10.42.20.5 --dport 80 -j ACCEPT
-A FORWARD -p tcp -d 10.42.20.5 --dport 22 -j ACCEPT
-A FORWARD -p udp -d 10.42.20.5 --dport 51820 -j ACCEPT
-A FORWARD -p udp -d 10.42.20.5 --dport 51821 -j ACCEPT
-A FORWARD -p udp -d 10.42.20.6 --dport 51822 -j ACCEPT
-A FORWARD -p udp -d 10.42.20.4 --dport 51823 -j ACCEPT

COMMIT
# Completed on Fri Jan 24 23:18:05 2020
